fix navmenu visibility

--- a/src/components/Navmenu/Navmenu.scss
+++ b/src/components/Navmenu/Navmenu.scss
@@ -130,6 +130,7 @@
       z-index: 10;
       position: fixed;
       top: 0;
+      right: -50%;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
